# LiveSubtitles

./: Makefile  pyproject.toml
live_subs_en_to_es/: __main__.py  overlay_mac.py  pipeline.py
